# stirki

./: .gitignore  README.md  compose.yml  main.py  pyproject.toml  test_db.py
description/: kaiten_response.py  функционал.md
pg_init/: 01-schema.sql  02-add-trello-card-id.sql
src/: database.py  devtools.py  enums.py  models.py  repositories.py  settings.py
src/bot/: keyboards.py  main.py  settings.py  states.py  texts.py
src/bot/handlers/: help.py  order.py  payment.py  reset.py  start.py
src/db/: database.py
src/services/: kaiten_kanban.py  kanban.py  pricing.py
