[project]
name = "stirki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "ipython>=8.37.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.5",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "icecream>=2.1.8",
    "ruff>=0.14.1",
]
